후원사, 주최 기관 및 일정 업데이트

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                             <div class="pb-header info-background dark"><h4 class="text-white"><strong>shake! 본선 정보</strong></h4></div>
                             <div class="pb-content info-background dark clearfix">
                                 <h4><strong>일시</strong></h4>
-                                2023년 3월 11일 토요일 (예상)<br>
+                                2023년 3월 11일 토요일<br>
                                 <h4><strong>장소</strong></h4>
                                 온라인 (Zoom)<br>
                                 <h4><strong>시상</strong></h4>
@@ -358,6 +358,7 @@
                                 2위~3위 : 아주대학교 LINC+ 사업단장상 및 <strong>상금 70만원</strong><br>
                                 4위~6위 : 아주대학교 창의산학교육원장상 및 <strong>상금 50만원</strong><br>
                                 7위~10위 : 장려상 (후원사 특별상) <strong>상금 30만원</strong><br>
+                                (시상 내역은 추후 변동 가능성 있습니다.)<br>
                             </div>
                         </div>
                     </div>
@@ -588,6 +589,7 @@
                             <div class="col-md-10">
                                 <h5 class="uppercase-text"><strong>주최</strong></h5>
                                 <a href="http://linc.ajou.ac.kr" target="_blank"> <img src="./static/img/company-linc.gif" style="width:200px; height:auto;" class="company"> </a>
+                                <a href="https://sw.ajou.ac.kr/sw/index.do" target="_blank"> <img src="./static/img/ajou-ncesw.png" style="width:200px; height:auto;" class="company"> </a>
                             </div>
                             <div class="col-md-2"></div>
                         </div>
@@ -606,12 +608,14 @@
                     <!--/.col-->
                     <div class="col-md-3">
                         <h5 class="uppercase-text"><strong>후원</strong></h5>
-                        <a href="https://www.modusign.co.kr/" target="_blank"><img src="./static/img/MODUSIGN.jpg" class="company" style = "width:80px; height : auto;" > </a><br><br>
-                        <a href="https://modulabs.co.kr/" target="_blank"><img src="./static/img/MODULAB.png" class="company" style = "width:80px; height : auto;"> </a><br>
-                        <a href="https://www.kitronyx.co.kr/" target="_blank"><img src="./static/img/Kitronyx.jpg" class="company" style = "width:120px; height : auto;"> </a><br>
-                        <a href="https://www.meissa.ai/ko/" target="_blank"><img src="./static/img/Meissa_Logo.jpg" class="company"> </a>
-                        <a href="https://d2.naver.com/home" target="_blank"><img src="./static/img/NAVER D2 LOGO.png" class="company"> </a>
-                        <a href="https://startlink.io/" target="_blank"><img src="./static/img/company-startlink.png" class="company"> </a>
+                        <!-- <a href="https://www.modusign.co.kr/" target="_blank"><img src="./static/img/MODUSIGN.jpg" class="company" style = "width:80px; height : auto;" > </a><br><br> -->
+                        <!-- <a href="https://modulabs.co.kr/" target="_blank"><img src="./static/img/MODULAB.png" class="company" style = "width:80px; height : auto;"> </a><br> -->
+                        <!-- <a href="https://www.kitronyx.co.kr/" target="_blank"><img src="./static/img/Kitronyx.jpg" class="company" style = "width:120px; height : auto;"> </a><br> -->
+                        <!-- <a href="https://www.meissa.ai/ko/" target="_blank"><img src="./static/img/Meissa_Logo.jpg" class="company"> </a> -->
+                        <!-- <a href="https://d2.naver.com/home" target="_blank"><img src="./static/img/NAVER D2 LOGO.png" class="company"> </a> -->
+                        <a href="https://startlink.io/" target="_blank"><img src="./static/img/company-startlink.png" class="company" style="width: 150px; height: auto;"> </a>
+                        <a href="https://www.moloco.com/ko" target="_blank"><img src="./static/img/moloco.png" class="company" style="width: 150px; height: auto;"> </a>
+                        <a href="https://www.mobis.co.kr/" target="_blank"><img src="./static/img/hyundaimobis_CI.jpg" class="company" style="width: 150px; height: auto;"> </a>
                     </div>
                     <!--/.col-->
                     <div class="col-md-12">
