Update award details and sponsers

--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                     </div>
                     <div class="col-md-1"></div>
                     <!-- /.col -->
-                    <div class="col-md-5">
+                    <div class="col-md-6">
                         <div class="promo-block shadow-5">
                             <div class="pb-header info-background dark"><h4 class="text-white"><strong>shake! 본선 정보</strong></h4></div>
                             <div class="pb-content info-background dark clearfix">
@@ -354,11 +354,11 @@
                                 <h4><strong>장소</strong></h4>
                                 온라인 (Zoom)<br>
                                 <h4><strong>시상</strong></h4>
-                                1위 : 아주대학교 총장상 및 <strong>상금 100만원</strong><br>
-                                2위~3위 : 아주대학교 LINC+ 사업단장상 및 <strong>상금 70만원</strong><br>
-                                4위~6위 : 아주대학교 창의산학교육원장상 및 <strong>상금 50만원</strong><br>
-                                7위~10위 : 장려상 (후원사 특별상) <strong>상금 30만원</strong><br>
-                                (시상 내역은 추후 변동 가능성 있습니다.)<br>
+                                대상(1명) : 아주대학교 총장상 및 <strong>상금 100만원</strong><br>
+                                최우수상(2명) : LINC 3.0 사업단장/SW융합교육원장상 및 <strong>상금 70만원</strong><br>
+                                우수상(4명) : 창의산학교육원장/SW융합교육원장상 및 <strong>상금 50만원</strong><br>
+                                장려상(6명) : 창의산학교육원장/SW교육센터장상 및 <strong>갤럭시워치 5 44mm</strong><br>
+                                특별상(2명) : 후원사 특별상 (몰로코, 현대모비스) <strong>100,000원권 상품권</strong><br>
                             </div>
                         </div>
                     </div>
@@ -613,9 +613,9 @@
                         <!-- <a href="https://www.kitronyx.co.kr/" target="_blank"><img src="./static/img/Kitronyx.jpg" class="company" style = "width:120px; height : auto;"> </a><br> -->
                         <!-- <a href="https://www.meissa.ai/ko/" target="_blank"><img src="./static/img/Meissa_Logo.jpg" class="company"> </a> -->
                         <!-- <a href="https://d2.naver.com/home" target="_blank"><img src="./static/img/NAVER D2 LOGO.png" class="company"> </a> -->
-                        <a href="https://startlink.io/" target="_blank"><img src="./static/img/company-startlink.png" class="company" style="width: 150px; height: auto;"> </a>
                         <a href="https://www.moloco.com/ko" target="_blank"><img src="./static/img/moloco.png" class="company" style="width: 150px; height: auto;"> </a>
                         <a href="https://www.mobis.co.kr/" target="_blank"><img src="./static/img/hyundaimobis_CI.jpg" class="company" style="width: 150px; height: auto;"> </a>
+                        <a href="https://startlink.io/" target="_blank"><img src="./static/img/company-startlink.png" class="company" style="width: 150px; height: auto;"> </a>
                     </div>
                     <!--/.col-->
                     <div class="col-md-12">
