--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
 
     <!-- Favicons -->
 
-    <meta property="og:image" content="https://shake.codes/static/img/2020_og.jpg"/>
-    <meta property="og:title" content="2021 경인지역 6개대학 연합 프로그래밍 경시대회 shake!"/>
+    <meta property="og:image" content="https://shake.codes/static/img/2022_shake_og.png"/>
+    <meta property="og:title" content="2022 경인지역 6개대학 연합 프로그래밍 경시대회 shake!"/>
     <meta property="og:url" content="https://shake.codes"/>
-    <meta property="og:site_name" content="shake! 2021"/>
+    <meta property="og:site_name" content="shake! 2022"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:description" content="아주대학교, 경희대학교, 성균관대학교, 인하대학교, 한국항공대학교, 한양대학교 ERICA의 학교 대표들이 모여 함께하는 교류의 장, 2021 shake!"/>
+    <meta property="og:description" content="아주대학교, 경희대학교, 성균관대학교, 인하대학교, 한국항공대학교, 한양대학교 ERICA의 학교 대표들이 모여 함께하는 교류의 장, 2022 shake!"/>
 
 </head>
 
