Update linc logo

--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
                         <div class="row">
                             <div class="col-md-10">
                                 <h5 class="uppercase-text"><strong>주최</strong></h5>
-                                <a href="http://linc.ajou.ac.kr" target="_blank"> <img src="./static/img/company-linc.gif" style="width:200px; height:auto;" class="company"> </a>
+                                <a href="http://linc.ajou.ac.kr" target="_blank"> <img src="./static/img/logo/LINC3.0.png" style="width:200px; height:auto;" class="company"> </a>
                                 <a href="https://sw.ajou.ac.kr/sw/index.do" target="_blank"> <img src="./static/img/ajou-ncesw.png" style="width:200px; height:auto;" class="company"> </a>
                             </div>
                             <div class="col-md-2"></div>
@@ -598,7 +598,7 @@
                     <div class="col-md-4">
                         <h5 class="uppercase-text"><strong>주관</strong></h5>
                         <p>아주대학교 알고리즘 소학회 <strong>A.N.S.I.</strong>
-                        <br>경희대학교 SW중심대학 사업단
+                        <br>경희대학교 컴퓨터공학부 학생회
                         <br>성균관대학교 알고리즘 동아리 <strong>NPC</strong>
                         <br>인하대학교 컴퓨터공학 학술소모임 <strong>CTP</strong>
                         <br>한국항공대학교 알고리즘 학회 <strong>koala</strong>
