--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                                 </li>
                                 <li><a href="#rule">기준 및 규정</a>
                                 </li>
-                                <li><a href="./results/2020/index.html">결과 보기</a>
+                                <li><a href="./results/2022/index.html">결과 보기</a>
                                 </li>
                             </ul>
                         </div>
@@ -127,7 +127,7 @@
                             <p>
 <!--                                 <a class="btn btn-punch btn-white hover-primary hover-colors btn-md" href="#apply" role="button">본선일정 안내</a>  -->
                                 <a class="btn btn-punch btn-white hover-primary hover-colors btn-md" href="#about" role="button">대회 정보</a>
-                                <a class="btn btn-punch btn-primary btn-md btn-darker" href="./results/2021/index.html" role="button">2021 결과</a>
+                                <a class="btn btn-punch btn-primary btn-md btn-darker" href="./results/2022/index.html" role="button">2022 결과</a>
                             </p>
                         </div>
                     </div>
@@ -384,6 +384,7 @@
                             <div class="row" style="margin-left:2%">
                                 <div class="col-md-6">
                                     <h3 class="lighter">shake! 본선 기출</h3>
+                                    <a href="https://www.acmicpc.net/contest/view/962"><button type="button" class="btn btn-danger btn-preprob"><strong>22 본선 문제</strong></button></a>
                                     <a href="https://www.acmicpc.net/category/detail/2399"><button type="button" class="btn btn-danger btn-preprob"><strong>20 본선 문제</strong></button></a>
                                     <a href="https://www.acmicpc.net/category/detail/2041"><button type="button" class="btn btn-danger btn-preprob"><strong>19 본선 문제</strong></button></a>
                                     <a href="https://www.acmicpc.net/category/detail/1890"><button type="button" class="btn btn-danger btn-preprob"><strong>18 본선 문제</strong></button></a>
@@ -391,6 +392,7 @@
                                     <a href="https://lavida.us/collection.php?col_id=4272"><button type="button" class="btn btn-danger btn-preprob"><strong>16 본선 문제</strong></button></a>
                                     <a href="https://lavida.us/collection.php?col_id=4269"><button type="button" class="btn btn-danger btn-preprob"><strong>15 본선 문제</strong></button></a>
                                     <br>
+                                    <a href="https://drive.google.com/file/d/1LrkDq0LkD_z6fidBHSabhCawgyYy4rz2/view?usp=sharing"><button type="button" class="btn btn-outline-danger btn-preprob"><strong>22 본선 풀이</strong></button></a>
                                     <a href="https://drive.google.com/file/d/1MA4W5Jic9goqLtH6fjn0ymgNF8GydA_O/view?usp=sharing"><button type="button" class="btn btn-outline-danger btn-preprob"><strong>20 본선 풀이</strong></button></a>
                                     <a href="https://drive.google.com/file/d/1mQoEx-oJPZu4Yg9buMWV4pHCBUvwtHsi/view?usp=sharing"><button type="button" class="btn btn-outline-danger btn-preprob"><strong>19 본선 풀이</strong></button></a>
                                     <a href="https://drive.google.com/open?id=1YVe7fMOU2owT6GJmf9nJCnN8QqfQ5rEW"><button type="button" class="btn btn-outline-danger btn-preprob"><strong>18 본선 풀이</strong></button></a>
